--- a/app/assets/stylesheets/vex-theme-plain.css
+++ b/app/assets/stylesheets/vex-theme-plain.css
@@ -1,118 +1,113 @@
 @keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-webkit-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-moz-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-ms-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-o-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 /* line 11, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain {
   padding-top: 160px;
@@ -171,7 +166,7 @@
   margin-bottom: 1em;
 }
 /* line 62, ../sass/vex-theme-plain.sass */
-.vex.vex-theme-plain .vex-dialog-form .vex-dialog-input textarea, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="text"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="password"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="email"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="url"] {
+.vex.vex-theme-plain .vex-dialog-form .vex-dialog-input textarea, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="date"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="datetime"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="datetime-local"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="email"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="month"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="number"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="password"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="search"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="tel"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="text"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="time"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="url"], .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="week"] {
   background: #f0f0f0;
   width: 100%;
   padding: 0.25em 0.67em;
@@ -183,9 +178,9 @@
   margin: 0 0 0.25em;
 }
 /* line 73, ../sass/vex-theme-plain.sass */
-.vex.vex-theme-plain .vex-dialog-form .vex-dialog-input textarea:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="text"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="password"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="email"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="url"]:focus {
-  -webkit-box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+.vex.vex-theme-plain .vex-dialog-form .vex-dialog-input textarea:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="date"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="datetime"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="datetime-local"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="email"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="month"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="number"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="password"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="search"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="tel"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="text"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="time"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="url"]:focus, .vex.vex-theme-plain .vex-dialog-form .vex-dialog-input input[type="week"]:focus {
   -moz-box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.2);
   outline: none;
 }
@@ -193,7 +188,7 @@
 .vex.vex-theme-plain .vex-dialog-form .vex-dialog-buttons {
   *zoom: 1;
 }
-/* line 38, ../../../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.0.alpha.20/stylesheets/compass/utilities/general/_clearfix.scss */
 .vex.vex-theme-plain .vex-dialog-form .vex-dialog-buttons:after {
   content: "";
   display: table;
@@ -201,6 +196,9 @@
 }
 /* line 80, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain .vex-dialog-button {
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
   border: 0;
   float: right;
   margin: 0 0 0 0.5em;
@@ -211,11 +209,11 @@
   line-height: 1em;
   padding: 0.75em 2em;
 }
-/* line 91, ../sass/vex-theme-plain.sass */
+/* line 92, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain .vex-dialog-button.vex-last {
   margin-left: 0;
 }
-/* line 94, ../sass/vex-theme-plain.sass */
+/* line 95, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain .vex-dialog-button:focus {
   animation: vex-pulse 1.1s infinite;
   -webkit-animation: vex-pulse 1.1s infinite;
@@ -226,7 +224,7 @@
   outline: none;
 }
 @media (max-width: 568px) {
-  /* line 94, ../sass/vex-theme-plain.sass */
+  /* line 95, ../sass/vex-theme-plain.sass */
   .vex.vex-theme-plain .vex-dialog-button:focus {
     animation: none;
     -webkit-animation: none;
@@ -236,18 +234,18 @@
     -webkit-backface-visibility: hidden;
   }
 }
-/* line 103, ../sass/vex-theme-plain.sass */
+/* line 104, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain .vex-dialog-button.vex-dialog-button-primary {
   background: #3288e6;
   color: white;
 }
-/* line 107, ../sass/vex-theme-plain.sass */
+/* line 108, ../sass/vex-theme-plain.sass */
 .vex.vex-theme-plain .vex-dialog-button.vex-dialog-button-secondary {
   background: #e0e0e0;
   color: #777777;
 }
 
-/* line 111, ../sass/vex-theme-plain.sass */
+/* line 112, ../sass/vex-theme-plain.sass */
 .vex-loading-spinner.vex-theme-plain {
   height: 2.5em;
   width: 2.5em;
