--- a/app/assets/stylesheets/vex-theme-wireframe.css
+++ b/app/assets/stylesheets/vex-theme-wireframe.css
@@ -1,118 +1,113 @@
 @keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-webkit-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-moz-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-ms-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 @-o-keyframes vex-pulse {
-  /* line 104, ../sass/_keyframes.sass */
+  /* line 136, ../sass/_keyframes.sass */
   0% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 
-  /* line 106, ../sass/_keyframes.sass */
+  /* line 138, ../sass/_keyframes.sass */
   70% {
-    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     -moz-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
+    -webkit-box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
     box-shadow: inset 0 0 0 300px rgba(255, 255, 255, 0.25);
   }
 
-  /* line 108, ../sass/_keyframes.sass */
+  /* line 140, ../sass/_keyframes.sass */
   100% {
-    -webkit-box-shadow: inset 0 0 0 300px transparent;
     -moz-box-shadow: inset 0 0 0 300px transparent;
+    -webkit-box-shadow: inset 0 0 0 300px transparent;
     box-shadow: inset 0 0 0 300px transparent;
   }
 }
-
 /* line 9, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe {
   padding-top: 160px;
@@ -174,7 +169,7 @@
   margin-bottom: 1em;
 }
 /* line 62, ../sass/vex-theme-wireframe.sass */
-.vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input textarea, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="text"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="password"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="email"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="url"] {
+.vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input textarea, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="date"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="datetime"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="datetime-local"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="email"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="month"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="number"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="password"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="search"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="tel"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="text"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="time"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="url"], .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="week"] {
   background: white;
   width: 100%;
   padding: 0.25em 0.67em;
@@ -186,7 +181,7 @@
   border: 2px solid black;
 }
 /* line 73, ../sass/vex-theme-wireframe.sass */
-.vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input textarea:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="text"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="password"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="email"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="url"]:focus {
+.vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input textarea:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="date"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="datetime"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="datetime-local"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="email"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="month"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="number"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="password"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="search"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="tel"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="text"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="time"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="url"]:focus, .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-input input[type="week"]:focus {
   border-style: dashed;
   outline: none;
 }
@@ -194,7 +189,7 @@
 .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-buttons {
   *zoom: 1;
 }
-/* line 38, ../../../../../.rvm/gems/ruby-1.9.3-p194/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+/* line 38, ../../../.rvm/gems/ruby-2.1.2/gems/compass-core-1.0.0.alpha.20/stylesheets/compass/utilities/general/_clearfix.scss */
 .vex.vex-theme-wireframe .vex-dialog-form .vex-dialog-buttons:after {
   content: "";
   display: table;
@@ -202,6 +197,9 @@
 }
 /* line 80, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button {
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
   border: 0;
   float: right;
   margin: 0 0 0 0.5em;
@@ -212,11 +210,11 @@
   line-height: 1em;
   padding: 0.75em 2em;
 }
-/* line 91, ../sass/vex-theme-wireframe.sass */
+/* line 92, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button.vex-last {
   margin-left: 0;
 }
-/* line 94, ../sass/vex-theme-wireframe.sass */
+/* line 95, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button:focus {
   animation: vex-pulse 1.1s infinite;
   -webkit-animation: vex-pulse 1.1s infinite;
@@ -227,7 +225,7 @@
   outline: none;
 }
 @media (max-width: 568px) {
-  /* line 94, ../sass/vex-theme-wireframe.sass */
+  /* line 95, ../sass/vex-theme-wireframe.sass */
   .vex.vex-theme-wireframe .vex-dialog-button:focus {
     animation: none;
     -webkit-animation: none;
@@ -237,20 +235,20 @@
     -webkit-backface-visibility: hidden;
   }
 }
-/* line 103, ../sass/vex-theme-wireframe.sass */
+/* line 104, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button.vex-dialog-button-primary {
   background: black;
   color: white;
   border: 2px solid transparent;
 }
-/* line 108, ../sass/vex-theme-wireframe.sass */
+/* line 109, ../sass/vex-theme-wireframe.sass */
 .vex.vex-theme-wireframe .vex-dialog-button.vex-dialog-button-secondary {
   background: white;
   color: black;
   border: 2px solid black;
 }
 
-/* line 113, ../sass/vex-theme-wireframe.sass */
+/* line 114, ../sass/vex-theme-wireframe.sass */
 .vex-loading-spinner.vex-theme-wireframe {
   height: 2.5em;
   width: 2.5em;
